Restore JDK8 support